--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
@@ -6,9 +6,48 @@
                       xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                     
+                      Title="Home"
+                      ShowMinButton="False"
+                      ShowMaxRestoreButton="False"
+                      ShowCloseButton="False"
+                      BorderBrush="Black"
+                      BorderThickness="1"
                       >
-    <Grid>
+    <Grid x:Name="mainGrid" Margin="5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width=".6*"/>
+            <ColumnDefinition Width=".4*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".8*"/>
+        </Grid.RowDefinitions>
         
+        <Label Grid.Row="0" Grid.Column="0" Content="Choose your Bank" Style="{StaticResource TitleText}"/>
+        <Grid x:Name="bankLogos" Grid.Column="0" Grid.Row="1" Margin="5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0" Grid.Column="0" Style="{StaticResource gridTiles}"/>
+            <Grid Grid.Row="0" Grid.Column="1" Style="{StaticResource gridTiles}"/>
+            <Grid Grid.Row="0" Grid.Column="2" Style="{StaticResource gridTiles}"/>
+            <Grid Grid.Row="0" Grid.Column="3" Style="{StaticResource gridTiles}"/>
+            <Grid Grid.Row="0" Grid.Column="4" Style="{StaticResource gridTiles}"/>
+            <Grid Grid.Row="1" Grid.Column="0" Style="{StaticResource gridTiles}"/>
+            <Grid Grid.Row="1" Grid.Column="1" Style="{StaticResource gridTiles}"/>
+            <Grid Grid.Row="1" Grid.Column="2" Style="{StaticResource gridTiles}"/>
+            <Grid Grid.Row="1" Grid.Column="3" Style="{StaticResource gridTiles}"/>
+            <Grid Grid.Row="1" Grid.Column="4" Style="{StaticResource gridTiles}"/>
+        </Grid>
     </Grid>
 </Controls:MetroWindow>
