--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
@@ -1,13 +1,26 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro">
     
     <Style x:Key="TitleText" TargetType="Label">
         <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="FontSize" Value="48"/>
     </Style>
-    
-    <Style x:Key="gridTiles" TargetType="Grid">
-        <Setter Property="Margin" Value="5"/>
-        <Setter Property="Background" Value="Blue"/>
+
+    <Style x:Key="LargeTileStyle" TargetType="Controls:Tile">
+        <Setter Property="Width" Value="300" />
+        <Setter Property="Height" Value="125" />
+        <Setter Property="TitleFontSize" Value="10" />
     </Style>
+
+    <Style x:Key="SmallTileStyle" TargetType="Controls:Tile">
+        <Setter Property="Width" Value="100" />
+        <Setter Property="Height" Value="100" />
+        <Setter Property="TitleFontSize" Value="10" />
+    </Style>
+    
+    <DataTemplate x:Key="smallTileDataTemplate">
+        <Image Source="{Binding Image}" Height="100" Width="100"/>
+    </DataTemplate>
+
 </ResourceDictionary>
