--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
@@ -29,6 +29,7 @@
         <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="Margin" Value="5"/>
+        <Setter Property="TextAlignment" Value="Justify"/>        
     </Style>
     
     <DataTemplate x:Key="smallTileDataTemplate">
