--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
@@ -24,6 +24,7 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" Content="Choose your Bank" Style="{StaticResource TitleText}"/>
+        <Image x:Name="companyLogo" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" Source="/Resources/Images/icici.png" Margin="0,0,20,0"/>
         <Grid x:Name="bankLogos" Grid.Row="1" Grid.Column="0">
             <WrapPanel>
                 <Controls:Tile Style="{StaticResource SmallTileStyle}">
@@ -90,7 +91,8 @@
         </Grid>
         <Grid x:Name="rightStaticText" Grid.Row="1" Grid.Column="1">
             <Border Style="{StaticResource contentBoxBorder}">
-                <TextBlock TextWrapping="Wrap" Style="{StaticResource contentBoxText}" ScrollViewer.VerticalScrollBarVisibility="Auto" HorizontalAlignment="Center" TextAlignment="Justify">
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
+                    <TextBlock TextWrapping="Wrap" Style="{StaticResource contentBoxText}">
                 This ATM uses a two-factor Biometric Authentication to check you are the account holder. By continuing to use the ATM services, you agree to provide you finger print and you agree to have your picture taken
                     <LineBreak/>
                     <LineBreak/>
@@ -99,7 +101,8 @@
                     <LineBreak/>
                  For any help or support needed to use the KIOSK, please call us on 1-800-CITIZEN-KIOSK.
 
-                </TextBlock>
+                    </TextBlock>
+                </ScrollViewer>
             </Border>
         </Grid>
     </Grid>
