ScreenBackground set for both bank and citizen

--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
@@ -15,6 +15,9 @@
                       TitleCaps="False"
                       ResizeMode="CanResizeWithGrip"
                       >
+    <Controls:MetroWindow.Background>
+        <ImageBrush ImageSource="Resources/Images/ScreenBackground.jpg"/>
+    </Controls:MetroWindow.Background>
     <Grid x:Name="mainGrid" Margin="5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width=".55*"/>
