--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/MainWindow.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/MainWindow.xaml
@@ -11,6 +11,9 @@
         ShowMinButton="False"
         ShowMaxRestoreButton="False"
         ShowCloseButton="False">
+    <Controls:MetroWindow.Background>
+        <ImageBrush ImageSource="Resources/Images/ScreenBackground.jpg"/>
+    </Controls:MetroWindow.Background>
     <Grid x:Name="mainGrid" Margin="5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width=".6*"/>
