--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Common/Styles.xaml
@@ -6,7 +6,10 @@
         <Setter Property="FontFamily" Value="Segoe UI"/>
         <Setter Property="FontSize" Value="48"/>
     </Style>
-    
+    <Style x:Key="TitleTextLong" TargetType="Label">
+        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="FontSize" Value="36"/>
+    </Style>
     <Style x:Key="LargeTileStyle" TargetType="Controls:Tile">
         <Setter Property="Width" Value="300" />
         <Setter Property="Height" Value="125" />
