--- a/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/MobileServices.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.CitizenKiosk/MobileServices.xaml
@@ -33,6 +33,7 @@
         </Grid>
 
         <Grid x:Name="servicesImages" Grid.Row="1" Grid.Column="0">
+            <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
             <WrapPanel>
                 <Controls:Tile Style="{StaticResource SmallTileStyle}">
                     <Controls:Tile.Background>
@@ -95,6 +96,7 @@
                     </Controls:Tile.Background>
                 </Controls:Tile>
             </WrapPanel>
+            </ScrollViewer>
         </Grid>
         <Grid x:Name="rightStaticText" Grid.Row="1" Grid.Column="1">
             <Border Style="{StaticResource contentBoxBorder}" Margin="5,5,5,20">
