changes relate to screen taking up full screen and taskbar hiding

--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/BankOptions.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/Views/BankOptions.xaml
@@ -11,6 +11,12 @@
         ShowMinButton="False"
         ShowMaxRestoreButton="False"
         ShowCloseButton="False"
+        TitleCaps="False"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
+        WindowState="Maximized"
+        WindowStyle="None"
+        IgnoreTaskbarOnMaximize="True"
         BorderBrush="Black"
         BorderThickness="1"
         >
