--- a/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
+++ b/DoyenBiz.BankingKiosk/DoyenBiz.BankingKiosk/MainWindow.xaml
@@ -13,7 +13,11 @@
                       BorderBrush="Black"
                       BorderThickness="1"
                       TitleCaps="False"
-                      ResizeMode="CanResizeWithGrip"
+                      ResizeMode="NoResize"
+                      WindowStartupLocation="CenterScreen"
+                      WindowState="Maximized"
+                      WindowStyle="None"
+                      IgnoreTaskbarOnMaximize="True"
                       >
     <Controls:MetroWindow.Background>
         <ImageBrush ImageSource="Resources/Images/ScreenBackground.jpg"/>
@@ -30,9 +34,7 @@
 
         <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
             <Label Content="Choose your Bank" Style="{StaticResource TitleTextLong}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <Viewbox HorizontalAlignment="Right" VerticalAlignment="Center">
-                <Image x:Name="companyLogo" Source="/Resources/Images/icici.png" Margin="0,0,20,0"/>
-            </Viewbox>
+            <Image x:Name="companyLogo" Source="/Resources/Images/icici.png" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,20,0"/>
         </Grid>
         
         <Grid x:Name="bankLogos" Grid.Row="1" Grid.Column="0">
